--- a/index.html
+++ b/index.html
@@ -4,7 +4,30 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MAW</title>
+    <title>MAW | Muhammad Alif Wahyudi</title>
+    <meta
+      name="description"
+      content="Portfolio of Muhammad Alif Wahyudi (MAW) showcasing web development and UI/UX projects, skills, and contact details."
+    />
+    <meta
+      name="keywords"
+      content="MAW, alif, wahyudi, alifwahyudi, web development, ui/ux, portfolio, frontend, developer"
+    />
+    <meta property="og:title" content="MAW | Muhammad Alif Wahyudi — Web Development & UI/UX" />
+    <meta
+      property="og:description"
+      content="Explore MAW’s projects, tech stack, and UI/UX work. Get in touch for collaborations and new builds."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.alifwahyudi.my.id/" />
+    <meta property="og:image" content="https://www.alifwahyudi.my.id/og-image.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="MAW | Muhammad Alif Wahyudi — Web Development & UI/UX" />
+    <meta
+      name="twitter:description"
+      content="Portfolio of MAW focusing on web development and UI/UX design."
+    />
+    <meta name="twitter:image" content="https://www.alifwahyudi.my.id/og-image.png" />
   </head>
   <body class="bg-black overflow-x-hidden">
     <div id="root"></div>
